--- a/package.json
+++ b/package.json
@@ -22,23 +22,21 @@
     "test:renderer": "vitest run -r packages/renderer --passWithNoTests",
     "watch": "node scripts/watch.mjs",
     "lint": "eslint . --ext js,mjs,cjs,ts,mts,cts,vue",
-    "typecheck:main": "tsc --noEmit -p packages/main/tsconfig.json",
-    "typecheck:preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck:renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
-    "typecheck": "npm run typecheck:main && npm run typecheck:preload && npm run typecheck:renderer",
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs",
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
   },
   "devDependencies": {
     "@types/node": "18.16.4",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@vitejs/plugin-vue": "4.2.1",
+    "@types/react": "^18.2.5",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "@vue/test-utils": "2.3.2",
     "cross-env": "7.0.3",
     "electron": "24.2.0",
-    "electron-builder": "23.6.0",
+    "electron-builder": "^24.3.0",
     "eslint": "8.39.0",
-    "eslint-plugin-vue": "9.11.0",
+    "eslint-config-prettier": "^8.8.0",
     "happy-dom": "9.10.9",
     "nano-staged": "0.8.0",
     "playwright": "1.33.0",
@@ -46,11 +44,11 @@
     "typescript": "5.0.4",
     "unplugin-auto-expose": "0.0.4",
     "vite": "4.3.4",
-    "vitest": "0.31.0",
-    "vue": "3.2.47",
-    "vue-tsc": "1.6.4"
+    "vitest": "0.31.0"
   },
   "dependencies": {
-    "electron-updater": "5.3.0"
+    "electron-updater": "5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
